# gravity-sim

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  capture.ps1  capture_seq.ps1  capture_video.py  capture_visible.ps1  check.js  diff_check.txt  gravity_web.cpp  index.html  index.js  index.wasm  main_gl.cpp  shell.html  view_artifacts.html  yt.html
CMakeLists.txt/: CMakeLists.txt
src/: Body.cpp  Body.h  Simulation.cpp  Simulation.h  main.cpp  main_gl.cpp
